--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -40,6 +40,7 @@
   border: 2px solid #1285a8 !important;
   border-radius: 15px;
   color: #1285a8;
+  font-size: 20px;
 }
 
 .chatbox-body {
